fixed minor issues

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="sectionContent">
               <p>
                 My name is Lenara Anafieva. I am a junior front-end developer.
-                My tech stack: react.js, html&css, javascript. I am open for new
+                My tech stack: html&css, javascript, react.js. I am open for new
                 project and experience.
               </p>
             </div>
@@ -96,7 +96,7 @@
 
             <article>
               <h2>Senior QA Engineer</h2>
-              <p class="subDetails">June 2004 - November 2017</p>
+              <p class="subDetails">June 2005 - November 2017</p>
               <p>Worked as Senior QA Engineer in different projects.</p>
             </article>
           </div>
@@ -129,7 +129,7 @@
             <article>
               <h2>Odessa State Academy of Refrigeration</h2>
               <p class="subDetails">Master's degree in Computer Science</p>
-              <p>Graduated with honors</p>
+              <p>2000-2005: Graduated with honors</p>
             </article>
 
             <article>
